Page MenuHome GnuPG

pinentry-qt: Pinentry window not shown on Wayland
Closed, ResolvedPublic

Description

On Wayland (at least in KWin), pinentry-qt is not shown when it is started.

How to reproduce:

  1. Start a Konsole running on Wayland
startplasma-wayland konsole
  1. In this Konsole run
pinentry
  1. After the pinentry prompt OK Pleased to meet you enter
GETPIN

-> Pinentry window is not shown.

Related Objects

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.