qt: Fix showing of pinentry window on Wayland

* qt/pinentrydialog.cpp (PinEntryDialog::PinEntryDialog): Skip the
minimize+raise trick on Wayland.
--

When running on Wayland then the following warning was logged:
qt.qpa.wayland: Wayland does not support QWindow::requestActivate()

Skipping the minimize+raise calls shows the window on Wayland without
fancy animation instead of not showing it at all.

GnuPG-bug-id: 5528